<resources>
    <string name="app_name">JavaCracker</string>

    <!--Preference Key-->
    <string name="preference_mock_server_address">proxy_mock_address</string>
    <string name="preference_proxy_server_address">proxy_server_address</string>
    <string name="show_answer">Show Answer</string>
    <string name="preference_which_api_to_use_key">which_api</string>
    <string name="preference_is_user_login">is_user_login</string>
    <string name="preference_user_name">user_name</string>
    <string name="preference_user_email">user_email</string>
    <string name="preference_user_password">user_password</string>

    <!--Menu-->
    <string name="menu_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>

    <!--Test-->
    <string name="txt_note">Note</string>
    <string name="dummy_que_text">Which method names follow the JavaBeans standard? (Choose all that apply.)</string>
    <string name="dummy_sol_text">The following questions will help you measure your understanding of the material presented in this chapter. Read all of the choices carefully, as there may be more than one correct answer. Choose all correct answers for each question. Stay focused.</string>


</resources>
