<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:imeOptions="actionNext"
        android:layout_margin="20dp"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editUsername"
        android:layout_centerVertical="true"
        android:layout_margin="20dp"
        android:imeOptions="actionDone"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/signInButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/sign_in_button_height"
        android:layout_below="@id/editPassword"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/sign_in" />


</RelativeLayout>
