<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/topic_detail_list_container_margin"
        android:layout_marginRight="@dimen/topic_detail_list_container_margin"
        android:orientation="vertical"
        android:importantForAccessibility="yes">

    <com.khalid.codecracker.widget.TextView
        android:id="@+id/txt_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:text="@string/dummy_que_text"
        android:textSize="18sp" />

    <View
        android:id="@+id/sol_info_divider"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/solution_detail_divider"
        android:paddingBottom="12dp"
        android:paddingTop="12dp"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/sol_info_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:paddingBottom="12dp"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:paddingTop="12dp"
        android:visibility="visible">

        <com.khalid.codecracker.widget.TextView
            android:id="@+id/sol_info_header_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="2dp"
            android:text="@string/show_answer"
            android:textColor="@color/qa_text_color"
            android:textSize="13sp"
            app:textStyle="medium" />

        <ImageView
            android:id="@+id/sol_info_chevron"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/read_more" />

        <com.khalid.codecracker.widget.TextView
            android:id="@+id/sol_info_description_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sol_info_header_text"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:lineSpacingExtra="2dp"
            android:paddingTop="8dp"
            android:textColor="@color/qa_text_color"
            android:text="@string/dummy_sol_text"
            android:textSize="11sp"
            android:visibility="gone"/>
    </RelativeLayout>
    </LinearLayout>

    <View
        android:id="@+id/row_divider"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/solution_detail_divider" />

</merge>